# cmake-template-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
assets/presets/: factorypreset.xml
cmake-include/: Rust.cmake
cmake-include/clap-juce-extensions/clap-libs/clap-helpers/include/clap/helpers/: macros.hh
libs/JUCE/examples/DemoRunner/: DemoRunner.jucer
libs/JUCE/examples/DemoRunner/Builds/MacOSX/: Info-App.plist
libs/JUCE/examples/DemoRunner/Builds/VisualStudio2017/: DemoRunner_App.vcxproj
libs/JUCE/examples/DemoRunner/Builds/VisualStudio2019/: DemoRunner_App.vcxproj
libs/JUCE/examples/DemoRunner/Builds/VisualStudio2022/: DemoRunner_App.vcxproj  resources.rc
libs/JUCE/examples/DemoRunner/Builds/iOS/: Info-App.plist
libs/JUCE/examples/DemoRunner/JuceLibraryCode/: JuceHeader.h
libs/JUCE/extras/AudioPerformanceTest/Builds/VisualStudio2022/: AudioPerformanceTest_App.vcxproj
libs/JUCE/extras/AudioPluginHost/Builds/VisualStudio2017/: AudioPluginHost_App.vcxproj
libs/JUCE/extras/AudioPluginHost/Builds/VisualStudio2019/: AudioPluginHost_App.vcxproj
libs/JUCE/extras/AudioPluginHost/Builds/VisualStudio2022/: AudioPluginHost_App.vcxproj
libs/JUCE/extras/BinaryBuilder/Builds/VisualStudio2022/: BinaryBuilder_ConsoleApp.vcxproj
libs/JUCE/extras/NetworkGraphicsDemo/Builds/VisualStudio2022/: NetworkGraphicsDemo_App.vcxproj
libs/JUCE/extras/Projucer/: Projucer.jucer
libs/JUCE/extras/Projucer/Builds/MacOSX/: Info-App.plist
libs/JUCE/extras/Projucer/Builds/VisualStudio2017/: Projucer_App.vcxproj
libs/JUCE/extras/Projucer/Builds/VisualStudio2019/: Projucer_App.vcxproj
libs/JUCE/extras/Projucer/Builds/VisualStudio2022/: Projucer_App.vcxproj  resources.rc
libs/JUCE/extras/Projucer/JuceLibraryCode/: JuceHeader.h
libs/JUCE/extras/Projucer/Source/Project/: jucer_Project.cpp
libs/JUCE/extras/Projucer/Source/ProjectSaving/: jucer_ProjectExport_Xcode.h
libs/JUCE/extras/UnitTestRunner/Builds/VisualStudio2017/: UnitTestRunner_ConsoleApp.vcxproj
libs/JUCE/extras/UnitTestRunner/Builds/VisualStudio2019/: UnitTestRunner_ConsoleApp.vcxproj
libs/JUCE/extras/UnitTestRunner/Builds/VisualStudio2022/: UnitTestRunner_ConsoleApp.vcxproj
libs/JUCE/extras/WindowsDLL/Builds/VisualStudio2022/: WindowsDLL_StaticLibrary.vcxproj
libs/JUCE/modules/juce_dsp/maths/: juce_LookupTable.h
libs/JUCE/modules/juce_dsp/processors/: juce_FIRFilter_test.cpp
rust/audio_processor/: Cargo.toml
rust/audio_processor/src/: lib.rs
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/Global/: Globals.cpp  Globals.h  Parameters.cpp  Parameters.h
source/dsp/: filter.cpp  filter.h  utils.h
source/gui/components/: PresetBrowser.cpp  PresetBrowser.h
source/gui/lookandfeel/: Colors.h  Gradient.h  MenuLAF.cpp  MenuLAF.h  TextButtonLAF.cpp  TextButtonLAF.h
source/gui/panels/: ExtrasPage.cpp  ExtrasPage.h  Header.cpp  Header.h  InfoPopup.cpp  InfoPopup.h  NavBar.cpp  NavBar.h
source/gui/widgets/: Menu.cpp  Menu.h  TextButton.cpp  TextButton.h
tests/: CMakeLists.txt  clipper-test.cpp  clipper-test.h  my_tests.cpp  my_tests.h
